# DAL

./: .gitignore  BF_File.h  BeamFormedFile.cc  BeamFormedFile.cpp  BeamFormedFile.h  BeamFormedFile.i  CLAFile.cpp  CLAFile.h  CMakeLists.txt  CONTRIBUTING.txt  ChangeLog  CommonAttributesFile.cc  CommonAttributesFile.h  Contributing  HDF5Attribute.h  HDF5Dataset.h  HDF5DatasetBase.h  HDF5File.cc  HDF5File.cpp  HDF5File.h  HDF5FileBase.cc  HDF5FileBase.h  HDF5Group.cpp  HDF5Group.h  HDF5GroupBase.cc  HDF5GroupBase.h  HDF5Node.h  INSTALL  INSTALL.txt  KnownIssues  LDA.i  Makefile  README  README.txt  Release-steps  ReleaseSteps  TBBFile.cc  TBBFile.h  TBB_File.cc  TBB_File.h  (+9 more)
_sources/: index.txt
api-reference/html/: Attribute_8h_source.html  BF__File_8h_source.html  CLA__File_8h_source.html  CommonTuples_8h_source.html  Coordinates_8h_source.html  Dataset_8h_source.html  FileInfo_8h_source.html  (+172 more)
casa/: CasaDatasetBase.h  CasaDatasetExtend.h  CasaTBBFileExtend.h
cmake/: FindCFITSIO.cmake  FindCasacore.cmake  FindHDF5_DAL.cmake  FindNumpy.cmake  FindNumpy.py  FindPyrap.cmake  FindPython.cmake  FindSphinx.cmake  FindValgrind.cmake  FindWCSLIB.cmake  LofarDoxygen.cmake  PythonInstall.cmake  PythonVersion.c  PythonVersion.cmake  TestHDF5.c  TestHDF5.cmake  TestIsSame.cc  TestMacros.cmake  TestSizeT.cmake
dal/: CMakeLists.txt  DAL.i  cmake_uninstall.cmake.in  dal.i  dal_config.h.in  dal_version.cc  dal_version.h  pyfragments.swg  size_types.i.in  vectors.i
dal/casa/: CMakeLists.txt  CasaDatasetExtend.h  CasaTBBFileExtend.h  README.txt
dal/doc/: CMakeLists.txt  doxygen.conf.in
dal/doc/design/: .gitignore  Makefile  Reqs_DD_layers.dia  Reqs_Design_Decisions.tex  build.sh  design_overview.txt  typeconversion.txt
dal/hdf5/: Attribute.h  Attribute.i  Attribute.tcc  CMakeLists.txt  Dataset.h  Dataset.i  Dataset.tcc  Dataset1D.h  Dataset1D.i  Dataset1D.tcc  File.cc  File.h  Group.cc  Group.h  Group.i  Node.cc  Node.h  Node.i
dal/hdf5/exceptions/: CMakeLists.txt  errorstack.cc  errorstack.h  exceptions.cc  exceptions.h  exceptions.i  h5errorstack.cc  h5exception.cc  h5exception.h
dal/hdf5/types/: CMakeLists.txt  FileInfo.cc  FileInfo.h  h5complex.h  h5tuple.h  h5tuple.i  h5typemap.h  hid_gc.h  implicitdowncast.h  isderivedfrom.h  issame.h  versiontype.cc  versiontype.h  versiontype.i
dal/lofar/: BF_File.cc  BF_File.h  CLA_File.cc  CLA_File.h  CMakeLists.txt  CommonAttributesFile.cc  CommonAttributesFile.h  CommonTuples.h  CommonTuples.i  Coordinates.cc  Coordinates.h  Flagging.cc  Flagging.h  Flagging.i  Station.cc  Station.h  StationNames.cc  StationNames.h  TBB_File.cc  TBB_File.h  TBB_File.i
dal/python/: CMakeLists.txt  __init__.py  setup.py.in
dal/utils/: CMakeLists.txt  bfheader.py  bfheaderedit.py  bfheaderinfo.py  bfmeta.py  lofar-bf-headeredit.py  lofar-bf-headerinfo.py  lofar-tbb-flaggeddata.py  lofar_bf_headeredit.py  lofar_bf_headerinfo.py  lofar_headerinfo.py  lofar_tbb_flaggeddata.py  lofar_tbb_headerinfo.py  tbb-lostframes.py
dal/utils/dal/: CMakeLists.txt  __init__.py  setup.py.in
dal/utils/lib/: CMakeLists.txt  bfmeta.py  setup.py.in
doc/: CMakeLists.txt  conf.py.in  index.rst
examples/: CMakeLists.txt  L30042_SAP000_B000_S0_P000_bf.raw  L59640_CS011_001010_D20110719T110541.036Z_tbb.raw  L59640_CS011_001011_D20110719T110541.036Z_tbb.raw  L59640_CS011_D20110719T110541.036Z_tbb.h5  L59640_RS106_001009_D20111121T130145.049Z_tbb.raw  L59640_RS106_D20111121T130145.049Z_tbb.h5  L63876_SAP000_B000_S0_P000_bf.h5  bfheaderinfo.py  bfmeta.py  example-bf-introspection.py  example-bf-read.py  example-bf-recreate-dataset.cc  example-custom-write.py  example-exceptions.py  example-introspection.py  example-tbb-read.cc  example-types.py  test.h5
examples/data/: L30042_SAP000_B000_S0_P000_bf.h5  L59640_CS011_D20110719T110541.036Z_tbb.h5  L59640_RS106_000001_D20111121T130145.049Z_tbb.raw  L59640_RS106_D20111121T130145.049Z_tbb.h5  L63876_SAP000_B000_S0_P000_bf.raw
hdf5core/: h5attribute.h  h5element.h  h5exception.h  h5typemap.h  hid_gc.h
package/: CMakeLists.txt
rpm/: README
src/: BF_File.cc  BF_File.h  CMakeLists.txt  CommonAttributesFile.cc  CommonAttributesFile.h  DAL.i  HDF5Attribute.h  HDF5FileBase.cc  HDF5GroupBase.h  LDA.i  TBB_File.h  dal_config.h.in  dal_version.cc  dal_version.h  datasets.i  docstrings.i  doxygen.conf  doxygen.conf.in  exceptions.i  lda_config.h.in  lda_version.cc  lda_version.h  pyfragments.swg  size_types.i.in  tuples.i  vectors.i
src/casa/: CMakeLists.txt  CasaDatasetExtend.h  CasaTBBFileExtend.h
src/doc/: CMakeLists.txt  design_overview.txt  doxy2swig.py  doxygen.conf.in  typeconversion.txt
src/doc/design/: build.sh  design_overview.txt
src/hdf5/: Attribute.h  Attribute.i  Attribute.tcc  CMakeLists.txt  Dataset.h  Dataset.tcc  File.h  Group.h  HDF5Attribute.h  HDF5Attribute.tcc  HDF5DatasetBase.h  HDF5DatasetBase.tcc  HDF5FileBase.cc  HDF5FileBase.h  HDF5GroupBase.cc  HDF5GroupBase.h  HDF5Node.cc  HDF5Node.h  HDF5Node.tcc  Node.cc  Node.h  attributes.i  datasets.i  groups.i
src/hdf5/exceptions/: CMakeLists.txt  exceptions.i  h5errorhandling.cc  h5errorhandling.h  h5errorstack.cc  h5errorstack.h  h5exception.cc  h5exception.h
src/hdf5/types/: CMakeLists.txt  h5complex.h  h5exception.h  h5tuple.h  h5typemap.h  hid_gc.h  implicitdowncast.h  isderivedfrom.h  tuples.i  versiontype.cc  versiontype.h
src/hdf5core/: CMakeLists.txt  h5complex.h
src/lofar/: BF_File.cc  BF_File.h  CMakeLists.txt  CommonAttributesFile.cc  CommonAttributesFile.h  CommonTuples.h  Coordinates.cc  Coordinates.h  TBB_File.cc  TBB_File.h
src/utils/: CMakeLists.txt  bfmeta.py
test/: CMakeLists.txt  attr-empty.cc  attr-empty.cpp  auto-create-bf-fields.py  constructors.cc  dataset-create1D.py  example.py  get-tbb-station-ref.cc  get-tbb-station-ref.cpp  get-tbb-station-ref.py  h5-test-create.c  h5-test-create.cc  h5-test-create.cpp  import-only.py  instantiate-only.cc  instantiate-only.cpp  print-bf-sap-attr.cc  remove-root-exc.cc  remove-root-exc.cpp  reopen-rw.cc  reopen-rw.cpp  reopen-rw.py  version-check.cc  version-check2.cc
(+70 files in other folders)
